--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/fontawesome-free": "^5.13.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
+    "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "html-webpack-plugin": "^4.0.3",
     "mathjs": "^6.6.2",
     "style-loader": "^1.1.3",
