--- a/package.json
+++ b/package.json
@@ -12,18 +12,14 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
-    "express": "^4.17.1",
-    "express-favicon": "^2.0.1",
     "html-webpack-plugin": "^4.0.3",
     "mathjs": "^6.6.2",
     "style-loader": "^1.1.3",
-    "webpack": "^4.42.1",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.42.1"
   },
   "devDependencies": {
+    "webpack-dev-server": "^3.10.3",
     "@babel/core": "^7.9.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.9.0",
